# zephyr

./: virt.dtb  virt.dtsi
arch/riscv/core/: ipi_clint.c  irq_manage.c  smp.c
boards/qemu/riscv64/: board.cmake
docs/drivers/interrupt_controller/: riscv_imsic.md
drivers/interrupt_controller/: CMakeLists.txt  Kconfig  Kconfig.aia  Kconfig.aplic  Kconfig.imsic  intc_aia.c  intc_aplic.c  intc_imsic.c  intc_shared.c  intc_shared.h
dts/bindings/interrupt-controller/: qemu,aplic.yaml  qemu,imsics.yaml  riscv,aplic.yaml  riscv,imsics.yaml
dts/riscv/qemu/: virt-riscv.dtsi
include/zephyr/drivers/interrupt_controller/: riscv_aia.h  riscv_aplic.h  riscv_imsic.h
irqchip/: Kconfig  irq-riscv-aplic-direct.c  irq-riscv-aplic-main.c  irq-riscv-aplic-main.h  irq-riscv-aplic-msi.c  irq-riscv-imsic-early.c  irq-riscv-imsic-platform.c  irq-riscv-imsic-state.c  irq-riscv-imsic-state.h  irq-riscv-intc.c  irq-sifive-plic.c
samples/drivers/aplic_test/: CMakeLists.txt  prj.conf  prj_advanced.conf  prj_imsic.conf  prj_imsic_basic.conf  prj_imsic_demo.conf  prj_imsic_demo_simple.conf  prj_imsic_interrupt_simple.conf  prj_imsic_interrupt_test.conf  prj_imsic_mmio_test.conf  prj_imsic_safe_test.conf  prj_imsic_smp.conf  prj_simple.conf  prj_smp.conf  prj_test.conf
samples/drivers/aplic_test/src/: main.c  main_advanced_test.c  main_aia_simple.c  main_comprehensive_test.c  main_imsic_basic.c  main_imsic_demo.c  main_imsic_demo_simple.c  main_imsic_interrupt_simple.c  main_imsic_interrupt_test.c  main_imsic_mmio_test.c  main_imsic_safe_test.c  main_imsic_smp.c  main_imsic_test.c  main_smp.c  main_smp_simple.c  main_smp_verification.c  main_verification.c
soc/common/riscv-privileged/: soc_common_irq.c
tests/arch/riscv/riscv_aia/: CMakeLists.txt  README.md  TEST_REPORT.md  prj.conf  sample_output.txt  testcase.yaml
tests/arch/riscv/riscv_aia/src/: main.c
tests/drivers/interrupt_controller/intc_aplic/: CMakeLists.txt  Kconfig  aplic_test.overlay  prj.conf  testcase.yaml
tests/drivers/interrupt_controller/intc_aplic/src/: main.c
