# Copyright (c) 2024 Zephyr Contributors
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})

# Determine which test to build based on configuration
if(DEFINED CONF_FILE AND CONF_FILE MATCHES "prj_imsic_safe_test.conf")
    project(imsic_safe_test)
    target_sources(app PRIVATE src/main_imsic_safe_test.c)
else()
    if(DEFINED CONF_FILE AND CONF_FILE MATCHES "prj_imsic_mmio_test.conf")
        project(imsic_mmio_test)
        target_sources(app PRIVATE src/main_imsic_mmio_test.c)
    else()
        if(DEFINED CONF_FILE AND CONF_FILE MATCHES "prj_imsic_interrupt_simple.conf")
            project(imsic_interrupt_simple)
            target_sources(app PRIVATE src/main_imsic_interrupt_simple.c)
        else()
            if(DEFINED CONF_FILE AND CONF_FILE MATCHES "prj_imsic_interrupt_test.conf")
                project(imsic_interrupt_test)
                target_sources(app PRIVATE src/main_imsic_interrupt_test.c)
            else()
                if(DEFINED CONF_FILE AND CONF_FILE MATCHES "prj_imsic_basic.conf")
                    project(imsic_basic)
                    target_sources(app PRIVATE src/main_imsic_basic.c)
                else()
                    if(DEFINED CONF_FILE AND CONF_FILE MATCHES "prj_imsic_demo_simple.conf")
                        project(imsic_demo_simple)
                        target_sources(app PRIVATE src/main_imsic_demo_simple.c)
                    else()
                        if(DEFINED CONF_FILE AND CONF_FILE MATCHES "prj_imsic_demo.conf")
                            project(imsic_demo)
                            target_sources(app PRIVATE src/main_imsic_demo.c)
                        else()
                            if(DEFINED CONF_FILE AND CONF_FILE MATCHES "prj_imsic_smp.conf")
                                project(imsic_smp_test)
                                target_sources(app PRIVATE src/main_imsic_smp.c)
                            else()
                                project(aplic_imsic_test)
                                target_sources(app PRIVATE src/main_imsic_test.c)
                            endif()
                        endif()
                    endif()
                endif()
            endif()
        endif()
    endif()
endif()
